# toolcraft

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA-SETUP.md  CLA.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  build_tools.py  cla-signatures.json  pyproject.toml  setup-cla.bat  setup-cla.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  docs.yml  publish.yml  test.yml
.ps_gallery/: .gitignore  Publish-ToolCraft.ps1  README.md  Use-ToolCraftPublishEnv.ps1
.ps_gallery/ToolCraft/: ToolCraft.psd1  ToolCraft.psm1
.ps_gallery/ToolCraft/toolcraft-win/: main.py  pyproject.toml
docs/: Makefile  README.md  _config.py  _config.yml  _toctree.yml  changelog.md  changelog.mdx  conf.py  contributing.md  contributing.mdx  development-notes.md  index.md  index.mdx  installation.md  installation.mdx  quickstart.md  quickstart.mdx
docs/_build/html/: .buildinfo  api.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/toolcraft/: cli.html  main.html
docs/_build/html/_sources/: api.rst.txt  index.md.txt  installation.md.txt
docs/api/: cli.md  cli.mdx  index.md  index.mdx  main.md  main.mdx
docs/user_guide/: cli.md  cli.mdx  examples.md  examples.mdx  index.md  index.mdx
examples/: metadata_demo.py
scripts/: verify_setup.py
tests/: __init__.py  test_main.py  test_metadata.py
toolcraft/: __init__.py  _version.py  cli.py  main.py
